Revert "autoupdate of configs in 'dotfiles'"
This reverts commit b0ae70daa613e72eb958f09ae8b09f273e1b32ea.

--- a/.config/git/config
+++ b/.config/git/config
@@ -52,14 +52,11 @@
 	conflictstyle = merge
 	renameLimit = 0
 	stat = true
-	tool = nvim
+	tool = vimdiff
 
 [mergetool]
 	prompt = false
 	keepBackup = false
-
-[mergetool "nvim"]
-	cmd = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
 
 [pull]
 	ff = only
